MOA-0007 Include Spock Test